--- a/css/style.css
+++ b/css/style.css
@@ -695,28 +695,32 @@ input[type=file]::-webkit-file-upload-button,
   position: relative;
 }
 
-.top-12{
-  top: 3rem;
-}
-
-.left-0{
-  left: 0px;
-}
-
-.bottom-0{
-  bottom: 0px;
-}
-
-.right-0{
-  right: 0px;
+.top-10{
+  top: 2.5rem;
 }
 
 .top-0{
   top: 0px;
 }
 
+.top-12{
+  top: 3rem;
+}
+
+.top-\[100px\]{
+  top: 100px;
+}
+
+.top-14{
+  top: 3.5rem;
+}
+
 .z-10{
   z-index: 10;
+}
+
+.m-4{
+  margin: 1rem;
 }
 
 .mx-4{
@@ -739,13 +743,17 @@ input[type=file]::-webkit-file-upload-button,
   margin-bottom: 0.5rem;
 }
 
-.mx-2{
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+.mx-8{
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 .mb-4{
   margin-bottom: 1rem;
+}
+
+.mr-2{
+  margin-right: 0.5rem;
 }
 
 .mb-2{
@@ -772,14 +780,6 @@ input[type=file]::-webkit-file-upload-button,
   margin-bottom: 0.25rem;
 }
 
-.mr-4{
-  margin-right: 1rem;
-}
-
-.mr-2{
-  margin-right: 0.5rem;
-}
-
 .block{
   display: block;
 }
@@ -802,6 +802,10 @@ input[type=file]::-webkit-file-upload-button,
 
 .hidden{
   display: none;
+}
+
+.h-full{
+  height: 100%;
 }
 
 .h-5{
@@ -1067,11 +1071,6 @@ input[type=file]::-webkit-file-upload-button,
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
-}
-
 .p-4{
   padding: 1rem;
 }
@@ -1134,10 +1133,6 @@ input[type=file]::-webkit-file-upload-button,
 
 .text-center{
   text-align: center;
-}
-
-.text-right{
-  text-align: right;
 }
 
 .font-mono{
@@ -1264,11 +1259,6 @@ input[type=file]::-webkit-file-upload-button,
 .text-amber-800{
   --tw-text-opacity: 1;
   color: rgb(146 64 14 / var(--tw-text-opacity));
-}
-
-.text-gray-400{
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .antialiased{
@@ -1463,6 +1453,11 @@ input[type=file]::-webkit-file-upload-button,
   font-weight: 600;
 }
 
+.focus\:underline:focus{
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
 .focus\:shadow-lg:focus{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1547,8 +1542,21 @@ input[type=file]::-webkit-file-upload-button,
 }
 
 @media (min-width: 640px){
-  .sm\:m-0{
-    margin: 0px;
+  .sm\:top-10{
+    top: 2.5rem;
+  }
+
+  .sm\:top-12{
+    top: 3rem;
+  }
+
+  .sm\:mx-8{
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+
+  .sm\:h-auto{
+    height: auto;
   }
 
   .sm\:w-auto{
