--- a/css/style.css
+++ b/css/style.css
@@ -695,14 +695,6 @@ input[type=file]::-webkit-file-upload-button,
   position: relative;
 }
 
-.top-14{
-  top: 3.5rem;
-}
-
-.top-0{
-  top: 0px;
-}
-
 .left-0{
   left: 0px;
 }
@@ -711,12 +703,52 @@ input[type=file]::-webkit-file-upload-button,
   right: 0px;
 }
 
-.z-10{
-  z-index: 10;
+.top-14{
+  top: 3.5rem;
 }
 
-.float-right{
-  float: right;
+.top-0{
+  top: 0px;
+}
+
+.bottom-0{
+  bottom: 0px;
+}
+
+.bottom-10{
+  bottom: 2.5rem;
+}
+
+.top-10{
+  top: 2.5rem;
+}
+
+.top-20{
+  top: 5rem;
+}
+
+.top-12{
+  top: 3rem;
+}
+
+.-bottom-0{
+  bottom: -0px;
+}
+
+.-right-0{
+  right: -0px;
+}
+
+.-top-0{
+  top: -0px;
+}
+
+.-left-0{
+  left: -0px;
+}
+
+.z-10{
+  z-index: 10;
 }
 
 .mx-auto{
@@ -732,6 +764,15 @@ input[type=file]::-webkit-file-upload-button,
 .my-2{
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.my-8{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.ml-24{
+  margin-left: 6rem;
 }
 
 .mb-4{
@@ -768,42 +809,6 @@ input[type=file]::-webkit-file-upload-button,
 
 .mb-1{
   margin-bottom: 0.25rem;
-}
-
-.-mt-4{
-  margin-top: -1rem;
-}
-
-.-mt-10{
-  margin-top: -2.5rem;
-}
-
-.-mt-20{
-  margin-top: -5rem;
-}
-
-.ml-10{
-  margin-left: 2.5rem;
-}
-
-.ml-16{
-  margin-left: 4rem;
-}
-
-.ml-20{
-  margin-left: 5rem;
-}
-
-.ml-24{
-  margin-left: 6rem;
-}
-
-.-ml-24{
-  margin-left: -6rem;
-}
-
-.-ml-20{
-  margin-left: -5rem;
 }
 
 .block{
@@ -866,10 +871,6 @@ input[type=file]::-webkit-file-upload-button,
   width: 10rem;
 }
 
-.w-auto{
-  width: auto;
-}
-
 .flex-1{
   flex: 1 1 0%;
 }
@@ -878,28 +879,8 @@ input[type=file]::-webkit-file-upload-button,
   flex-grow: 1;
 }
 
-.translate-y-10{
-  --tw-translate-y: 2.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-10{
-  --tw-translate-y: -2.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-6{
-  --tw-translate-y: -1.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-4{
-  --tw-translate-y: -1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-4{
-  --tw-translate-y: 1rem;
+.-translate-y-8{
+  --tw-translate-y: -2rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -908,23 +889,13 @@ input[type=file]::-webkit-file-upload-button,
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-8{
-  --tw-translate-y: -2rem;
+.-translate-y-20{
+  --tw-translate-y: -5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .rotate-45{
   --tw-rotate: 45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-6{
-  --tw-rotate: 6deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-rotate-6{
-  --tw-rotate: -6deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1006,10 +977,6 @@ input[type=file]::-webkit-file-upload-button,
   flex-direction: column;
 }
 
-.content-center{
-  align-content: center;
-}
-
 .items-center{
   align-items: center;
 }
@@ -1082,14 +1049,6 @@ input[type=file]::-webkit-file-upload-button,
   border-bottom-width: 4px;
 }
 
-.border-r-4{
-  border-right-width: 4px;
-}
-
-.border-r-8{
-  border-right-width: 8px;
-}
-
 .border-dotted{
   border-style: dotted;
 }
@@ -1112,34 +1071,6 @@ input[type=file]::-webkit-file-upload-button,
 .border-gray-500{
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
-}
-
-.border-amber-600{
-  --tw-border-opacity: 1;
-  border-color: rgb(217 119 6 / var(--tw-border-opacity));
-}
-
-.border-amber-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(245 158 11 / var(--tw-border-opacity));
-}
-
-.border-amber-400{
-  --tw-border-opacity: 1;
-  border-color: rgb(251 191 36 / var(--tw-border-opacity));
-}
-
-.border-amber-500\/50{
-  border-color: rgb(245 158 11 / 0.5);
-}
-
-.border-amber-500\/30{
-  border-color: rgb(245 158 11 / 0.3);
-}
-
-.border-white{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-gray-100{
@@ -1190,64 +1121,14 @@ input[type=file]::-webkit-file-upload-button,
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
+.bg-emerald-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 250 229 / var(--tw-bg-opacity));
+}
+
 .bg-gray-50{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
-.bg-sky-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(3 105 161 / var(--tw-bg-opacity));
-}
-
-.bg-amber-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(180 83 9 / var(--tw-bg-opacity));
-}
-
-.bg-amber-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 158 11 / var(--tw-bg-opacity));
-}
-
-.bg-amber-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 191 36 / var(--tw-bg-opacity));
-}
-
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-purple-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(126 34 206 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#eed\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 238 221 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#fff\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-sky-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
-}
-
-.bg-sky-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(125 211 252 / var(--tw-bg-opacity));
-}
-
-.bg-gray-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .p-4{
@@ -1256,10 +1137,6 @@ input[type=file]::-webkit-file-upload-button,
 
 .p-2{
   padding: 0.5rem;
-}
-
-.p-6{
-  padding: 1.5rem;
 }
 
 .px-8{
@@ -1306,20 +1183,16 @@ input[type=file]::-webkit-file-upload-button,
   padding-bottom: 1rem;
 }
 
+.pt-6{
+  padding-top: 1.5rem;
+}
+
 .pb-1{
   padding-bottom: 0.25rem;
 }
 
 .pr-4{
   padding-right: 1rem;
-}
-
-.pt-4{
-  padding-top: 1rem;
-}
-
-.pt-6{
-  padding-top: 1.5rem;
 }
 
 .text-center{
@@ -1339,6 +1212,11 @@ input[type=file]::-webkit-file-upload-button,
   line-height: 1.25rem;
 }
 
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-9xl{
   font-size: 8rem;
   line-height: 1;
@@ -1347,6 +1225,11 @@ input[type=file]::-webkit-file-upload-button,
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-xs{
@@ -1359,33 +1242,17 @@ input[type=file]::-webkit-file-upload-button,
   line-height: 2.25rem;
 }
 
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
 }
 
-.text-7xl{
-  font-size: 4.5rem;
-  line-height: 1;
-}
-
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .font-medium{
   font-weight: 500;
+}
+
+.font-bold{
+  font-weight: 700;
 }
 
 .font-extrabold{
@@ -1408,10 +1275,6 @@ input[type=file]::-webkit-file-upload-button,
   font-weight: 300;
 }
 
-.font-bold{
-  font-weight: 700;
-}
-
 .font-black{
   font-weight: 900;
 }
@@ -1428,36 +1291,8 @@ input[type=file]::-webkit-file-upload-button,
   line-height: 1.25;
 }
 
-.leading-10{
-  line-height: 2.5rem;
-}
-
-.leading-none{
-  line-height: 1;
-}
-
 .tracking-tighter{
   letter-spacing: -0.05em;
-}
-
-.tracking-\[-10px\]{
-  letter-spacing: -10px;
-}
-
-.tracking-\[-20px\]{
-  letter-spacing: -20px;
-}
-
-.tracking-\[-1rem\]{
-  letter-spacing: -1rem;
-}
-
-.tracking-\[-\.9rem\]{
-  letter-spacing: -.9rem;
-}
-
-.tracking-\[-\.7rem\]{
-  letter-spacing: -.7rem;
 }
 
 .-tracking-tighter{
@@ -1477,6 +1312,16 @@ input[type=file]::-webkit-file-upload-button,
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-amber-600{
+  --tw-text-opacity: 1;
+  color: rgb(217 119 6 / var(--tw-text-opacity));
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-gray-600{
@@ -1506,86 +1351,6 @@ input[type=file]::-webkit-file-upload-button,
 .text-amber-800{
   --tw-text-opacity: 1;
   color: rgb(146 64 14 / var(--tw-text-opacity));
-}
-
-.text-pink-300{
-  --tw-text-opacity: 1;
-  color: rgb(249 168 212 / var(--tw-text-opacity));
-}
-
-.text-pink-600{
-  --tw-text-opacity: 1;
-  color: rgb(219 39 119 / var(--tw-text-opacity));
-}
-
-.text-pink-800{
-  --tw-text-opacity: 1;
-  color: rgb(157 23 77 / var(--tw-text-opacity));
-}
-
-.text-pink-700{
-  --tw-text-opacity: 1;
-  color: rgb(190 24 93 / var(--tw-text-opacity));
-}
-
-.text-slate-600{
-  --tw-text-opacity: 1;
-  color: rgb(71 85 105 / var(--tw-text-opacity));
-}
-
-.text-emerald-700{
-  --tw-text-opacity: 1;
-  color: rgb(4 120 87 / var(--tw-text-opacity));
-}
-
-.text-teal-700{
-  --tw-text-opacity: 1;
-  color: rgb(15 118 110 / var(--tw-text-opacity));
-}
-
-.text-green-700{
-  --tw-text-opacity: 1;
-  color: rgb(21 128 61 / var(--tw-text-opacity));
-}
-
-.text-purple-700{
-  --tw-text-opacity: 1;
-  color: rgb(126 34 206 / var(--tw-text-opacity));
-}
-
-.text-yellow-500{
-  --tw-text-opacity: 1;
-  color: rgb(234 179 8 / var(--tw-text-opacity));
-}
-
-.text-yellow-300{
-  --tw-text-opacity: 1;
-  color: rgb(253 224 71 / var(--tw-text-opacity));
-}
-
-.text-black{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.text-red-700{
-  --tw-text-opacity: 1;
-  color: rgb(185 28 28 / var(--tw-text-opacity));
-}
-
-.text-red-600{
-  --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
-}
-
-.text-amber-600{
-  --tw-text-opacity: 1;
-  color: rgb(217 119 6 / var(--tw-text-opacity));
 }
 
 .antialiased{
@@ -1699,98 +1464,6 @@ input[type=file]::-webkit-file-upload-button,
 .selection\:text-fuchsia-900::selection{
   --tw-text-opacity: 1;
   color: rgb(112 26 117 / var(--tw-text-opacity));
-}
-
-.before\:absolute::before{
-  content: var(--tw-content);
-  position: absolute;
-}
-
-.before\:top-0::before{
-  content: var(--tw-content);
-  top: 0px;
-}
-
-.before\:right-0::before{
-  content: var(--tw-content);
-  right: 0px;
-}
-
-.before\:bottom-0::before{
-  content: var(--tw-content);
-  bottom: 0px;
-}
-
-.before\:float-right::before{
-  content: var(--tw-content);
-  float: right;
-}
-
-.before\:h-full::before{
-  content: var(--tw-content);
-  height: 100%;
-}
-
-.before\:w-full::before{
-  content: var(--tw-content);
-  width: 100%;
-}
-
-.before\:translate-x-10::before{
-  content: var(--tw-content);
-  --tw-translate-x: 2.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.before\:translate-x-2::before{
-  content: var(--tw-content);
-  --tw-translate-x: 0.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.before\:translate-x-4::before{
-  content: var(--tw-content);
-  --tw-translate-x: 1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.before\:border-r-8::before{
-  content: var(--tw-content);
-  border-right-width: 8px;
-}
-
-.before\:border-amber-300::before{
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(252 211 77 / var(--tw-border-opacity));
-}
-
-.before\:border-red-300::before{
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(252 165 165 / var(--tw-border-opacity));
-}
-
-.before\:border-blue-500::before{
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity));
-}
-
-.before\:border-emerald-500::before{
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(16 185 129 / var(--tw-border-opacity));
-}
-
-.before\:bg-emerald-500\/30::before{
-  content: var(--tw-content);
-  background-color: rgb(16 185 129 / 0.3);
-}
-
-.before\:outline::before{
-  content: var(--tw-content);
-  outline-style: solid;
 }
 
 .after\:h-3\.5::after{
