--- a/tailwind.css
+++ b/tailwind.css
@@ -1,10 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Montserrat&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
+	.font-fjalla-one {
+		font-family: 'Fjalla One';
+	}
+	.font-montserrat {
+		font-family: Montserrat;
+	}
 	.text-accent {
 		@apply text-amber-700 font-semibold
 	}
