--- a/css/markdown.css
+++ b/css/markdown.css
@@ -1,39 +1,74 @@
-@import url(http://fonts.googleapis.com/css?family=Merriweather:300italic,300);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:300italic,300);
 
 .markdown {
 	font-family: Merriweather, Georgia, 'Times New Roman', Times, serif;
-	padding-top: 1rem;
-	color: #666;
+	padding: 1rem 0 4rem 0;
+	color: #111;
+}
+
+.markdown a,
+.markdown a:visited,
+.markdown a:link,
+.markdown a:hover,
+.markdown a:active {
+	color: steelblue;
+	text-decoration: underline;
 }
 
 h1 {
-	background-color: #131313;
-	color: #ccc;
-	padding: .25rem .75rem;
+	font-size: xx-large;
+	margin-bottom: 1rem;
+}
+
+h2 {
+	/* background-color: #131313; */
+	/* color: #ccc; */
 	border-radius: 4px;
-	border-bottom: 1px solid #ccc;
+	background-color: #e3e3e3;
+	padding: .25rem .75rem;
+	border: 1px solid #ccc;
 	margin-bottom: 1rem;
 	font-size: x-large;
 }
 
-h2 {
-	background-color: #e3e3e3;
-	padding: .25rem .5rem;
-	border-radius: 4px;
+h3 {
+	/* padding: .25rem 0; */
+	/* border-radius: 4px; */
+	border-bottom: 1px solid #ccc;
 	font-size: large;
 	font-weight: bold;
 	margin: 1rem 0;
 }
 
-h3 {
+h4 {
 	color: darkred;
 	font-size: normal;
 	margin: 1rem 0 0.15rem 0;
 	font-weight: bold;
 }
 
+h5 {
+	color: #666;
+	font-size: normal;
+	margin: 1rem 0 0.15rem 0;
+	font-weight: bold;
+	text-decoration: underline;
+}
+
 code {
+	padding: .15rem .5rem;
 	font-size: medium;
+	border-radius: .15rem;
+	background-color: #eee;
+	border: 1px solid #ddd;
+}
+
+pre > code {
+	background-color: #333;
+	color: white;
+	display: block;
+	overflow: auto;
+	max-height: 500px;;
 }
 
 p, ul {
