--- a/css/style.css
+++ b/css/style.css
@@ -598,10 +598,6 @@ video {
   font-family: 'Fjalla One';
 }
 
-.font-montserrat {
-  font-family: Montserrat;
-}
-
 .text-accent{
   font-weight: 600;
   --tw-text-opacity: 1;
@@ -723,14 +719,6 @@ input[type=file]::-webkit-file-upload-button,
   left: 25%;
 }
 
-.right-\[-30\%\]{
-  right: -30%;
-}
-
-.right-\[30\%\]{
-  right: 30%;
-}
-
 .right-\[25\%\]{
   right: 25%;
 }
@@ -754,6 +742,10 @@ input[type=file]::-webkit-file-upload-button,
   margin-bottom: 0.5rem;
 }
 
+.ml-24{
+  margin-left: 6rem;
+}
+
 .mb-4{
   margin-bottom: 1rem;
 }
@@ -764,10 +756,6 @@ input[type=file]::-webkit-file-upload-button,
 
 .mb-2{
   margin-bottom: 0.5rem;
-}
-
-.ml-24{
-  margin-left: 6rem;
 }
 
 .ml-2{
@@ -838,10 +826,6 @@ input[type=file]::-webkit-file-upload-button,
   max-height: 80vh;
 }
 
-.w-auto{
-  width: auto;
-}
-
 .w-full{
   width: 100%;
 }
@@ -852,6 +836,10 @@ input[type=file]::-webkit-file-upload-button,
 
 .w-8{
   width: 2rem;
+}
+
+.w-auto{
+  width: auto;
 }
 
 .w-40{
@@ -886,6 +874,10 @@ input[type=file]::-webkit-file-upload-button,
 
 .cursor-move{
   cursor: move;
+}
+
+.cursor-default{
+  cursor: default;
 }
 
 .cursor-not-allowed{
@@ -1328,6 +1320,21 @@ input[type=file]::-webkit-file-upload-button,
 .text-amber-800{
   --tw-text-opacity: 1;
   color: rgb(146 64 14 / var(--tw-text-opacity));
+}
+
+.text-blue-500{
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.underline{
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
 }
 
 .antialiased{
