--- a/css/markdown.css
+++ b/css/markdown.css
@@ -58,17 +58,19 @@ h5 {
 code {
 	padding: .15rem .5rem;
 	font-size: medium;
-	border-radius: .15rem;
+	border-radius: .25rem;
 	background-color: #eee;
 	border: 1px solid #ddd;
 }
 
 pre > code {
 	background-color: #333;
+	border: none;
 	color: white;
 	display: block;
 	overflow: auto;
-	max-height: 500px;;
+	max-height: 600px;
+	margin: 1rem 0;
 }
 
 p, ul {
